# setup_venv

./: .gitignore  pyproject.toml
setup_venv/: new_venv.py
